ffmpeg: mark attachment streams finished.

Fix trac ticket #2083.